--- a/day-04/Cargo.toml
+++ b/day-04/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "day-2"
+name = "day-04"
 version = "0.1.0"
 authors = ["GitHub <noreply@github.com>"]
 edition = "2018"
@@ -8,3 +8,4 @@ edition = "2018"
 
 [dependencies]
 utils = { path = "../utils" }
+regex = "1"
